assets/css/v2/dup/free_text.scss
.free-text {
  font-family: Inter;
}

.free-text__line {
  display: inline-block;
  vertical-align: middle;

  .free-text__route-pill {
    transform: translateY(-20px);
  }
}

.free-text__icon-container {
  display: inline-block;
  vertical-align: middle;
  text-align: center;

  .free-text__route-pill {
    margin-top: 30px;
    color: #ffffff;
  }
}

.free-text__element {
  &:not(:last-child)::after {
    content: " ";
  }
}

.free-text__string {
  &--bold {
    font-weight: 700;
  }

  &--small {
    font-size: 0.8em;
  }
}

.free-text__route-pill {
  display: inline-block;
  font-family: Helvetica, sans-serif;
  font-weight: 700;
  text-align: center;

  &--green,
  &--green_b,
  &--green_c,
  &--green_d,
  &--green_e {
    background: $line-color-green;
  }

  &--blue {
    background: $line-color-blue;
  }

  &--red {
    background: $line-color-red;
  }

  &--orange {
    background: $line-color-orange;
  }

  &--silver {
    background: $line-color-silver;
  }

  &--cr {
    background: $line-color-cr;
  }

  &--bus {
    background: $line-color-bus;
    box-shadow: 2px 4px 2px 0px rgba(0, 0, 0, 0.25);
  }
}

.free-text__route-pill__text {
  display: inline-block;
  font-family: Helvetica, sans-serif;
  font-weight: 700;
  text-align: center;
  transform: translateY(12px);

  &--branch {
    font-size: 84px;
    transform: translateY(8px);
  }
}

.free-text__text-pill {
  display: inline-block;
  font-family: Helvetica, sans-serif;
  font-weight: 700;
  transform: translateY(-20px);

  &--green {
    background: $line-color-green;
  }

  &--blue {
    background: $line-color-blue;
  }

  &--red {
    background: $line-color-red;
  }

  &--orange {
    background: $line-color-orange;
  }

  &--silver {
    background: $line-color-silver;
  }

  &--purple {
    background: $line-color-cr;
  }
}

.free-text__text-pill__text {
  display: inline-block;
  font-family: Helvetica, sans-serif;
  font-weight: 700;
  transform: translateY(12px);
}

.partial-alert {
  .free-text {
    font-size: 136px;
    color: #ffffff;
  }

  .free-text__line {
    width: 1608px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    line-height: 208px;
  }

  .free-text__icon-container {
    width: 312px;
    height: 208px;
  }

  .free-text__icon-image {
    height: 128px;
    padding-top: 40px;
    padding-bottom: 40px;
  }

  .free-text__route-pill {
    height: 144px;
    width: 248px;
    border-radius: 72px;
    font-size: 96px;
    line-height: 144px;
  }

  .free-text__text-pill {
    border-radius: 84px;
    font-size: 126px;
    line-height: 168px;
    padding-left: 84px;
    padding-right: 84px;
  }

  .free-text__inline-icon {
    height: 208px;
    line-height: 208px;
  }

  .free-text__inline-icon-image {
    height: 139px;
    transform: translateY(20px);
  }

  &--dark {
    .free-text {
      color: #171f26;
    }

    .free-text__route-pill {
      color: #ffffff;
    }

    .free-text__text-pill {
      color: #ffffff;
    }
  }
}

.full-screen-alert-text {
  .free-text {
    // prolly needs to be 136px
    font-size: 138px;
    color: #ffffff;
  }

  .free-text__line-container {
    margin-bottom: 56px;
    line-height: 144px;
  }

  .free-text__line {
    width: 1517px;
  }

  .free-text__icon-container {
    width: 184px;
    height: 184px;
    margin-right: 64px;
    vertical-align: top;
  }

  .free-text__icon-image {
    width: 100%;
    height: 100%;
    object-fit: contain;
  }

  .free-text__route-pill {
    height: 144px;
    width: 248px;
    border-radius: 72px;
    font-size: 96px;
    line-height: 144px;
  }

  .free-text__text-pill {
    border-radius: 84px;
    font-size: 126px;
    line-height: 168px;
    padding-left: 84px;
    padding-right: 84px;
  }

  .free-text__inline-icon {
    height: 168px;
    line-height: 168px;
  }

  .free-text__inline-icon-image {
    transform: translateY(20px);
    height: 139px;
  }

  &--dark {
    .free-text {
      color: #171f26;
    }

    .free-text__route-pill {
      color: #ffffff;
    }

    .free-text__text-pill {
      color: #ffffff;
    }
  }
}

.no-data-section {
  .free-text {
    display: inline-block;
    margin: 32px;
  }

  .free-text__line {
    font-weight: 600;
    font-size: 138px;
    line-height: 128px;
    color: #171f26;
  }

  .free-text__route-pill {
    height: 144px;
    width: 248px;
    border-radius: 72px;
    margin: 0 32px 0 0;
    display: table;
  }

  .free-text__route-pill__text {
    font-size: 96px;
    font-weight: 700;
    display: table-cell;
    vertical-align: middle;
    transform: unset;
  }

  .free-text__icon-container {
    width: 248px;
    height: 144px;
    margin-right: 32px;
    vertical-align: top;
  }
}

